CC-54 Moved docker user-related env variable simplifications from mre

--- a/{{ cookiecutter.repo_slug }}/Makefile
+++ b/{{ cookiecutter.repo_slug }}/Makefile
@@ -47,14 +47,6 @@ JUPYTER_BASE_IMAGE := ${JUPYTER_SCIPY_IMAGE}
 JUPYTER_BASE_VERSION := ${JUPYTER_SCIPY_VERSION}
 
 JUPYTER_CHOWN_EXTRA := "/${DATA_DIR}"
-JUPYTER_UID := $(shell id -u)
-JUPYTER_USERNAME := $(shell id -u -n)
-
-POSTGRES_UID := $(shell id -u)
-POSTGRES_GID := $(shell id -g)
-
-PYTHON_DEV_UID := $(shell id -u)
-PYTHON_DEV_GID := $(shell id -g)
 
 TRAVIS_JOB =
 TRAVIS_TOKEN =
@@ -175,9 +167,9 @@ prune:
 build:
 	DOCKER_BUILDKIT=${BUILDKIT} COMPOSE_DOCKER_CLI_BUILD=${BUILDKIT} \
 	JUPYTER_BASE_IMAGE=${JUPYTER_BASE_IMAGE} JUPYTER_BASE_VERSION=${JUPYTER_BASE_VERSION} \
-	JUPYTER_TARGET=${JUPYTER_TARGET} JUPYTER_USERNAME=${JUPYTER_USERNAME} \
+	JUPYTER_TARGET=${JUPYTER_TARGET} \
 	MLFLOW_VERSION=${MLFLOW_VERSION} \
-	POSTGRES_UID=${POSTGRES_UID} POSTGRES_GID=${POSTGRES_GID} \
+	HOST_USERNAME=${HOST_USERNAME} HOST_UID=${HOST_UID} HOST_GID=${HOST_GID} \
 	docker-compose build ${BUILD_OPTS}
 
 ${MLFLOW_ARTIFACT_STORE}:
@@ -190,18 +182,16 @@ up: ${MLFLOW_ARTIFACT_STORE} ${POSTGRES_STORE}
 	JUPYTER_BASE_IMAGE=${JUPYTER_BASE_IMAGE} JUPYTER_BASE_VERSION=${JUPYTER_BASE_VERSION} \
 	JUPYTER_TARGET=${JUPYTER_TARGET} \
 	JUPYTER_CHOWN_EXTRA=${JUPYTER_CHOWN_EXTRA} \
-	JUPYTER_UID=${JUPYTER_UID} JUPYTER_USERNAME=${JUPYTER_USERNAME} \
 	JUPYTER_ENABLE_LAB=${JUPYTER_ENABLE_LAB} \
-	POSTGRES_UID=${POSTGRES_UID} POSTGRES_GID=${POSTGRES_GID} \
+	HOST_USERNAME=${HOST_USERNAME} HOST_UID=${HOST_UID} HOST_GID=${HOST_GID} \
 	docker-compose up ${UP_OPTS}
 
 run: ${MLFLOW_ARTIFACT_STORE} ${POSTGRES_STORE}
 	JUPYTER_BASE_IMAGE=${JUPYTER_BASE_IMAGE} JUPYTER_BASE_VERSION=${JUPYTER_BASE_VERSION} \
 	JUPYTER_TARGET=${JUPYTER_TARGET} \
 	JUPYTER_CHOWN_EXTRA=${JUPYTER_CHOWN_EXTRA} \
-	JUPYTER_UID=${JUPYTER_UID} JUPYTER_USERNAME=${JUPYTER_USERNAME} \
 	JUPYTER_ENABLE_LAB=${JUPYTER_ENABLE_LAB} \
-	POSTGRES_UID=${POSTGRES_UID} POSTGRES_GID=${POSTGRES_GID} \
+	HOST_USERNAME=${HOST_USERNAME} HOST_UID=${HOST_UID} HOST_GID=${HOST_GID} \
 	docker-compose run ${RUN_OPTS}
 
 down:
@@ -213,7 +203,7 @@ python-dev-build:
 	DOCKER_BUILDKIT=${BUILDKIT} \
 	docker build . \
 		-f ./docker/python-dev/Dockerfile \
-		--build-arg UID=${PYTHON_DEV_UID} --build-arg GID=${PYTHON_DEV_GID} \
+		--build-arg UID=${HOST_UID} --build-arg GID=${HOST_GID} \
 		-t ${IMAGE_OWNER}/${PYTHON_DEV_IMAGE_NAME}:${VERSION} \
 		${BUILD_OPTS}
 
