CC-54 Added tests to flake8

--- a/{{ cookiecutter.repo_slug }}/tox.ini
+++ b/{{ cookiecutter.repo_slug }}/tox.ini
@@ -41,6 +41,7 @@ skip_install = true
 [testenv:flake8]
 commands =
     flake8 ./src/{{ cookiecutter.package_name }}
+    flake8 tests
     flake8 setup.py
 deps =
     flake8
