CC-54 Added pytest command to template Makefile

--- a/{{ cookiecutter.repo_slug }}/Makefile
+++ b/{{ cookiecutter.repo_slug }}/Makefile
@@ -214,6 +214,9 @@ tox: python-dev-build
 		${IMAGE_OWNER}/${PYTHON_DEV_IMAGE_NAME}:${VERSION} \
 		${PYTHON_DEV_CMD}
 
+pytest: PYTHON_DEV_CMD := tox -e py37
+pytest: tox
+
 sphinx-build:
 	DOCKER_BUILDKIT=${BUILDKIT} \
 	docker build \
