--- a/{{ cookiecutter.repo_slug }}/tox.ini
+++ b/{{ cookiecutter.repo_slug }}/tox.ini
@@ -40,7 +40,7 @@ skip_install = true
 
 [testenv:flake8]
 commands =
-    flake8 ./src/{{ cookiecutter.package_name }}
+    flake8 ./src/{{ cookiecutter.package_name }} --per-file-ignores='*/__init__.py:F401'
     flake8 tests
     flake8 setup.py
 deps =
